🍎📼 Checkpoint ./public/index.html:51548543/184

--- a/public/index.html
+++ b/public/index.html
@@ -508,7 +508,7 @@
         <div id="wallsettings">
           <h1>Wall Actions</h1>
           <a href="/static/WallGuide.pdf" target="_blank" class="buttonlink"
-            >Wall Guide</a
+             ><p>Wall Guide</p></a
           ><br />
           <input id="protect" type="checkbox" /><label for="protect"
             >Protect</label
