🎑👜 Checkpoint ./public/mail.html:51974198/36 ./public/index.html:51974198/54479

--- a/public/index.html
+++ b/public/index.html
@@ -58,11 +58,11 @@
   <body>
     <script>
       var $buoop = {
-        required: { e: -4, f: 111, o: 96, s: 8, c: 111 },
+        required: { e: 79, f: 117, o: 100, s: -6, c: 116 },
         insecure: true,
         unsupported: true,
         style: "bottom",
-        api: 2024.02,
+        api: 2024.06,
       };
       function $buo_f() {
         var e = document.createElement("script");
@@ -435,10 +435,14 @@
           <h3>Oneko</h3>
           <button onclick="summonOneko();">Summon an Oneko cat</button><br />
           <button onclick="onekoDisaster();">ONEKO DISASTER!</button><br />
-          <button onclick="superOnekoDisaster();">SUPER ONEKO DISASTER</button><br />
-          <button onclick="ultraOnekoDisaster();">ULTRA ONEKO DISASTER!!!</button>
+          <button onclick="superOnekoDisaster();">SUPER ONEKO DISASTER</button
+          ><br />
+          <button onclick="ultraOnekoDisaster();">
+            ULTRA ONEKO DISASTER!!!
+          </button>
           <button onclick="removeOneko();">Remove a Oneko cat</button><br />
-          <button onclick="removeDisasters();">Cancel Oneko Disasters</button><br /><br />
+          <button onclick="removeDisasters();">Cancel Oneko Disasters</button
+          ><br /><br />
           <button
             onclick="joinDiscord();"
             style="background-color: #5865f2; color: #ffffff"
@@ -486,7 +490,9 @@
             }
           </script>
           <div id="navigation" style="display: none">
-            <br /><button onclick="window.history.back()">⬅️</button><button onclick="window.history.forward()">➡️</button><button onclick="location.reload()">🔄</button>
+            <br /><button onclick="window.history.back()">⬅️</button
+            ><button onclick="window.history.forward()">➡️</button
+            ><button onclick="location.reload()">🔄</button>
           </div>
           <script>
             function clientTell() {
@@ -508,7 +514,7 @@
         <div id="wallsettings">
           <h1>Wall Actions</h1>
           <a href="/static/WallGuide.pdf" target="_blank" class="buttonlink"
-             ><p>Wall Guide</p></a
+            ><p>Wall Guide</p></a
           ><br />
           <input id="protect" type="checkbox" /><label for="protect"
             >Protect</label
@@ -670,8 +676,13 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
         <div id="goto" title="Teleport" class="infobtn">
           <img alt="↗" src="/static/go.svg" />
         </div>
-        <div id="owner" title="This user is the owner of Falling1's TextWall." class="infobtn" style="display: none;">
-          <img alt="👑" src="/static/crown.png">
+        <div
+          id="owner"
+          title="This user is the owner of Falling1's TextWall."
+          class="infobtn"
+          style="display: none"
+        >
+          <img alt="👑" src="/static/crown.png" />
         </div>
         <!--
         <div title="Discord" class="infobtn">
