🌻✌️ Checkpoint ./public/index.html:51974198/41 ./public/mail.html:51974198/33 ./public/manifest.webmanifest:51974198/10 ./public/robots.txt:51974198/138 ./public/download.html:51974198/88 ./public/advertiseexample.html:51974198/2669

--- a/public/download.html
+++ b/public/download.html
@@ -2,10 +2,9 @@
   <head>
     <title>Download the App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Dimka">
   </head>
-  <body style="background-color: #000000; color: #ffffff">
-    <center>
+  <body style="background-color: #000000; color: #ffffff; text-align: center;">
+    <article>
       <h1>Download the App</h1>
       <small><a href="/">(go back)</a></small>
       <h2>Desktop</h2>
@@ -31,6 +30,6 @@
         <img src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/IMG_20240208_002241.jpg" width="488" height="855"><br />
         Step 3: You're done! Tap "Done" if you wanna open the app later or tap "Open" if you wanna open it right now.
       </p>
-    </center>
+    </article>
   </body>
 </html>
