--- a/public/mail.html
+++ b/public/mail.html
@@ -25,7 +25,7 @@
     <p>
       if urgent or important, you can include
       <input value="<@836988339491962881>" readonly id="addping" /> in the mail
-      to notify Falling1.
+      to notify the owner of the site.
     </p>
     <script>
       sendmail.onsubmit = (e) => {
