--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1"
     />
     <meta name="google" content="notranslate" />
-    <meta name="application-name" content="Dimka's TextWall" />
-    <title>Dimka's TextWall</title>
+    <meta name="application-name" content="Uni's TextWall" />
+    <title>Uni's TextWall</title>
     <link
       rel="icon"
       sizes="80x80"
@@ -36,9 +36,9 @@
     <link rel="manifest" href="/manifest.webmanifest" />
     <meta name="description" content="Multiplayer text editor, but better." />
     <meta id="theme-colour" name="theme-color" content="#222222" />
-    <meta property="og:title" content="Dimka's TextWall" />
+    <meta property="og:title" content="Uni's TextWall" />
     <meta property="og:type" content="website" />
-    <meta name="keywords" content="Dimka, TextWall" />
+    <meta name="keywords" content="textwall" />
     <meta
       property="og:description"
       content="Multiplayer text editor, but better."
