🏝👂 Checkpoint ./.glitch-assets:51974198/483 ./public/download.html:51974198/294

--- a/public/download.html
+++ b/public/download.html
@@ -9,12 +9,12 @@
       <small><a href="/">(go back)</a></small>
       <h2>Desktop</h2>
       <p>
-        (You need Chrome or an Chromium browser.)<br />
+        (You need Google Chrome or an Chromium browser like Microsoft Edge, Opera, Brave, etc.)<br />
         Click the small desktop (with an down arrow) icon and click
         Install.<br />
       </p>      
       <img
-          src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/b7138739-984a-453c-b196-8adafe81c568.image.png"
+          src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/b23da5db-1074-4f45-aae1-9defad6f6ad0.image.png"
         />
       <h2>
         Android
