--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link
       rel="icon"
       sizes="80x80"
-      href="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/image%20(3).png"
+      href="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/unitextwall.png"
     />
     <link
       rel="apple-touch-icon"
