🎬🚃 Checkpoint ./.glitch-assets:51974198/762 ./public/manifest.webmanifest:51974198/295 ./public/index.html:51974198/173

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,7 @@
     <title>Uni's TextWall</title>
     <link
       rel="icon"
-      sizes="80x80"
-      href="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/unitextwall.png"
+      href="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/image(6).png"
     />
     <link
       rel="apple-touch-icon"
