🚉🧀 Checkpoint ./public/download.html:51974198/159

--- a/public/download.html
+++ b/public/download.html
@@ -1,12 +1,13 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Download the App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
-  <body style="background-color: #000000; color: #ffffff; text-align: center;">
+  <body style="background-color: #202020; color: #ffffff; text-align: center; font-family: sans-serif;">
     <article>
       <h1>Download the App</h1>
-      <small><a href="/">(go back)</a></small>
+      <small>(or <a href="/">go back)</a></small>
       <h2>Desktop</h2>
       <p>
         (You need Google Chrome or an Chromium browser like Microsoft Edge, Opera, Brave, etc.)<br />
@@ -20,7 +21,7 @@
         Android
       </h2>
       <p>
-        Download the app <a href="https://files.catbox.moe/tcpcr7.apk">here</a><br />
+        Download the app <a href="https://files.catbox.moe/6cbwcj.apk">here</a> (1.02)<br />
         After you have downloaded it, follow the steps:<br />
         Step 1: Open the downloaded file.<br />
         <img src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/IMG_20240208_001330.jpg" width="510" height="161"><br />
