👏🐾 Checkpoint ./server.js:51974198/8 ./public/index.html:51974198/18 ./public/manifest.webmanifest:51974198/85 ./.glitch-assets:51974198/258 ./public/static/discordlogin.js:51548543/8

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
       property="og:description"
       content="Multiplayer text editor, but better."
     />
-    <meta property="og:url" content="https://dimkatextwall.glitch.me/" />
+    <meta property="og:url" content="https://unitextwall.glitch.me/" />
     <meta
       property="og:image"
       content="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/uycrpj.gif?v=1705309497280"
@@ -599,7 +599,7 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
           ><input id="l" type="checkbox" checked="false" /><br />
           <input type="text" id="t" /><br />
           <input id="refresh" value="Refresh" type="button" /><br /><a
-            href="https://glitch.com/edit/#!/dimkatextwall"
+            href="https://glitch.com/edit/#!/unitextwall"
             target="_blank"
             ><button>Edit Project</button></a
           ><br />
