👦🐿 Checkpoint ./public/index.html:51974198/164 ./server.js:51974198/140

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
     <meta property="og:url" content="https://unitextwall.glitch.me/" />
     <meta
       property="og:image"
-      content="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/uycrpj.gif?v=1705309497280"
+      content="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/image(5).png"
     />
     <link rel="stylesheet" href="/static/textwall.css" />
     <script
