👔🌷 Checkpoint ./public/static/textwall.js:51974198/105 ./server.js:51974198/28 ./public/download.html:51974198/3076

--- a/public/download.html
+++ b/public/download.html
@@ -2,34 +2,39 @@
 <html>
   <head>
     <title>Download the App</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
-  <body style="background-color: #202020; color: #ffffff; text-align: center; font-family: sans-serif;">
+  <body
+    style="
+      background-color: #202020;
+      color: #ffffff;
+      text-align: center;
+      font-family: sans-serif;
+    "
+  >
+    <h1>Download the App</h1>
+    <small>(or <a href="/">go back)</a></small>
     <article>
-      <h1>Download the App</h1>
-      <small>(or <a href="/">go back)</a></small>
       <h2>Desktop</h2>
       <p>
-        (You need Google Chrome or an Chromium browser like Microsoft Edge, Opera, Brave, etc.)<br />
-        Click the small desktop (with an down arrow) icon and click
-        Install.<br />
-      </p>      
+        (You need Google Chrome or an Chromium browser like Microsoft Edge,
+        Opera, Brave, etc.)<br />
+        Click the small desktop (with an down arrow) icon and click Install.<br />
+      </p>
       <img
-          src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/b23da5db-1074-4f45-aae1-9defad6f6ad0.image.png"
-        />
-      <h2>
-        Android
-      </h2>
+        src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/b23da5db-1074-4f45-aae1-9defad6f6ad0.image.png"
+      />
+      <h2>Android</h2>
       <p>
-        Download the app <a href="https://files.catbox.moe/6cbwcj.apk">here</a> (1.02)<br />
+        Download the app
+        <a href="https://files.catbox.moe/6cbwcj.apk">here</a> (1.02)<br />
         After you have downloaded it, follow the steps:<br />
         Step 1: Open the downloaded file.<br />
-        <img src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/IMG_20240208_001330.jpg" width="510" height="161"><br />
         Step 2: Tap "Install".<br />
-        <img src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/IMG_20240208_001617.jpg" width="512" height="1024"><br />
-        Step 2.5: If Google Play Protect blocks the app, just tap "Details" and "Install Anyway".<br />
-        <img src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/IMG_20240208_002241.jpg" width="488" height="855"><br />
-        Step 3: You're done! Tap "Done" if you wanna open the app later or tap "Open" if you wanna open it right now.
+        Step 2.5: If Google Play Protect blocks the app, just tap "Details" and
+        "Install Anyway".<br />
+        Step 3: You're done! Tap "Done" if you wanna open the app later or tap
+        "Open" if you wanna open it right now.
       </p>
     </article>
   </body>
