🏙🎁 Checkpoint ./public/download.html:51974198/74

--- a/public/download.html
+++ b/public/download.html
@@ -27,7 +27,7 @@
       <h2>Android</h2>
       <p>
         Download the app
-        <a href="https://files.catbox.moe/6cbwcj.apk">here</a> (1.02)<br />
+        <a href="https://files.catbox.moe/ojyqxh.apk">here</a> (1.03)<br />
         After you have downloaded it, follow the steps:<br />
         Step 1: Open the downloaded file.<br />
         Step 2: Tap "Install".<br />
