🌹☂️ Checkpoint ./public/index.html:51548543/124

--- a/public/index.html
+++ b/public/index.html
@@ -597,6 +597,7 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
           <h3>Admin</h3>
           <label>Login to type?</label
           ><input id="l" type="checkbox" checked="false" /><br />
+          <label>Close registration?</label><input id="closereg" type="checkbox" checked="false" />
           <input type="text" id="t" /><br />
           <input id="refresh" value="Refresh" type="button" /><br /><a
             href="https://glitch.com/edit/#!/unitextwall"
