--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <title>Uni's TextWall</title>
     <link
       rel="icon"
-      href="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/image(6).png"
+      href="https://unitextwall.glitch.me/static/icons/image(6).png"
     />
     <link
       rel="apple-touch-icon"
