--- a/public/index.html
+++ b/public/index.html
@@ -11,26 +11,26 @@
     <title>Uni's TextWall</title>
     <link
       rel="icon"
-      href="https://unitextwall.glitch.me/static/icons/image(6).png"
+      href="https://unitextwall.glitch.me/static/icons/icon.png"
     />
     <link
       rel="apple-touch-icon"
-      href="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/apple-touch-icon-iphone-60x60.png"
+      href="https://unitextwall.glitch.me/static/icons/apple-touch-icon-iphone-60x60.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="60x60"
-      href="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/apple-touch-icon-ipad-76x76.png"
+      href="https://unitextwall.glitch.me/static/icons/apple-touch-icon-ipad-76x76.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="114x114"
-      href="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/apple-touch-icon-iphone-retina-120x120.png"
+      href="https://unitextwall.glitch.me/static/icons/apple-touch-icon-iphone-retina-120x120.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="144x144"
-      href="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/apple-touch-icon-ipad-retina-152x152.png"
+      href="https://unitextwall.glitch.me/static/icons/apple-touch-icon-ipad-retina-152x152.png"
     />
     <link rel="manifest" href="/manifest.webmanifest" />
     <meta name="description" content="Multiplayer text editor, but better." />
