🚕👨‍❤️‍👨 Checkpoint ./public/download.html:51974198/913 ./public/index.html:51974198/278

--- a/public/download.html
+++ b/public/download.html
@@ -26,15 +26,7 @@
       />
       <h2>Android</h2>
       <p>
-        Download the app
-        <a href="https://files.catbox.moe/ojyqxh.apk">here</a> (1.03)<br />
-        After you have downloaded it, follow the steps:<br />
-        Step 1: Open the downloaded file.<br />
-        Step 2: Tap "Install".<br />
-        Step 2.5: If Google Play Protect blocks the app, just tap "Details" and
-        "Install Anyway".<br />
-        Step 3: You're done! Tap "Done" if you wanna open the app later or tap
-        "Open" if you wanna open it right now.
+        The mobile app has been discontinued, On Google Chrome, go to the site and press the 3 vertical dots ( ⋮ ) then click "Add to Home screen" and click "Install"
       </p>
     </article>
   </body>
