--- a/public/index.html
+++ b/public/index.html
@@ -463,15 +463,8 @@
               Send mail
             </button></a
           >
-          <a href="/download.html"
-            ><button style="background-color: #ffffff">
-              <img
-                src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/31/Android_robot_head.svg/120px-Android_robot_head.svg.png"
-                height="11"
-                width="18"
-              />
-              Download Android App
-            </button></a
+          <a href="⋮"
+            ><button style="background-color: #ffffff">Download App</button></a
           >
           <button onclick="removeChat()" id="removechat">Remove Chat</button>
           <script>
