🎻💂 Checkpoint ./public/index.html:51974198/82

--- a/public/index.html
+++ b/public/index.html
@@ -463,7 +463,7 @@
               Send mail
             </button></a
           >
-          <a href="⋮"
+          <a href="https://www.installpwa.com/from/unitextwall.glitch.me"
             ><button style="background-color: #ffffff">Download App</button></a
           >
           <button onclick="removeChat()" id="removechat">Remove Chat</button>
