🍱🧀 Checkpoint ./public/mail.html:51974198/34

--- a/public/mail.html
+++ b/public/mail.html
@@ -2,7 +2,7 @@
   <head>
     <title>Send a Mail</title>
   </head>
-  <body style="text-align: center; color: #ffffff; background-color: #000000">
+  <body style="text-align: center; color: #ffffff; background-color: #000000; font-family: sans-serif;">
     <form id="sendmail">
       <h1>Send a mail</h1>
       <p>
