🐚📊 Checkpoint ./.glitch-assets:51974198/483 ./public/download.html:51974198/243

--- a/public/download.html
+++ b/public/download.html
@@ -22,11 +22,11 @@
         Click the small desktop (with an down arrow) icon and click Install.<br />
       </p>
       <img
-        src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/b23da5db-1074-4f45-aae1-9defad6f6ad0.image.png"
+        src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/0b3f9993-b600-431f-92fb-842c3a7016af.image.png"
       />
       <h2>Android</h2>
       <p>
-        The mobile app has been discontinued, On Google Chrome, go to the site and press the 3 vertical dots ( ⋮ ) then click "Add to Home screen" and click "Install"
+        The previous mobile app has been discontinued, On Google Chrome, go to the site and press the 3 vertical dots ( ⋮ ) then click "Add to Home screen" and click "Install"
       </p>
     </article>
   </body>
