--- a/public/index.html
+++ b/public/index.html
@@ -29,10 +29,7 @@
       content="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/image(5).png"
     />
     <link rel="stylesheet" href="/static/textwall.css" />
-    <script
-      src="https://unpkg.com/twemoji@latest/dist/twemoji.min.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
     <script src="/warning.js"></script>
   </head>
   <body>
