🍜🎉 Checkpoint ./server.js:51974198/49 ./public/static/textwall.js:51974198/11 ./public/banscreen.html:51974198/50

--- a/public/banscreen.html
+++ b/public/banscreen.html
@@ -6483,7 +6483,7 @@ document.addEventListener('DOMContentLoaded', onDocumentLoad);
           <a id="error-information-button" class="hidden" onclick="toggleErrorInformationPopup();" jstcache="0"></a>
         </h1>
         <p jsselect="summary" jsvalues=".innerHTML:msg" jstcache="1">
-          You have been banned from Dimka's TextWall, Appeal at <a href="https://discord.gg/zTu3ptNQVJ">the discord server</a>.<br></p>
+          You have been banned from Uni's TextWall, You can appeal at <a href="https://discord.gg/zTu3ptNQVJ">the discord server</a>if you think this was a mistake<br></p>
       <p>
         Ban reason: banreason</p>
         <!--The suggestion list and error code are normally presented inline,
