🏪💳 Checkpoint ./public/maintenance.html:51974198/960

--- a/public/maintenance.html
+++ b/public/maintenance.html
@@ -1,14 +1,15 @@
+<!DOCTYPE html>
 <!-- Hey there! -->
 <!-- Sorry if you got interrupted by this screen -->
 <!-- But that's not my problem. -->
 <head>
-  <meta property="og:title" content="Dimka's TextWall" />
+  <meta property="og:title" content="Uni's TextWall" />
   <meta property="og:type" content="website" />
   <meta
     property="og:description"
     content="The site is currently down... Sorry!"
   />
-  <meta property="og:url" content="https://textwall.cc/" />
+  <meta property="og:url" content="https://unitextwall.glitch.me/" />
 
   <meta
     property="og:image"
@@ -19,11 +20,9 @@
     sizes="80x80"
     href="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/down%20web%20icon.png?v=1705589045674"
   />
-  <title>Dimka's TextWall is down</title>
-</head>
-<body
-  style="
-    background-image: url('https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/maintenance%20bg%202.png');
+  <title>Uni's TextWall is down</title>
+  <style>
+  background-image: url('https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/maintenance%20bg%202.png');
     color: white;
     font-size: 28px;
     display: flex;
@@ -36,9 +35,10 @@
     text-align: center;
     background-repeat: repeat-x;
     background-color: #460082;
-  "
->
-  <span>Dimka's TextWall is currently under maintenance.</span>
+  </style>
+</head>
+<body>
+  <span>Uni's TextWall is currently under maintenance.</span>
   <span>We're making new things...</span><br />
   <audio
     src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/cqd6i7.mp3"
