--- a/public/maintenance.html
+++ b/public/maintenance.html
@@ -22,19 +22,22 @@
   />
   <title>Uni's TextWall is down</title>
   <style>
-  background-image: url('https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/maintenance%20bg%202.png');
-    color: white;
-    font-size: 28px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
-    justify-content: center;
-    margin: 0;
-    background-position: bottom;
-    text-align: center;
-    background-repeat: repeat-x;
-    background-color: #460082;
+    body {
+      background-image: url("https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/maintenance%20bg%202.png");
+      color: white;
+      font-family: sans-serif;
+      font-size: 32px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      height: 100vh;
+      justify-content: center;
+      margin: 0;
+      background-position: bottom;
+      text-align: center;
+      background-repeat: repeat-x;
+      background-color: #320084; /*460082*/
+    }
   </style>
 </head>
 <body>
