🎁👡 Checkpoint ./public/maintenance.html:51974198/280 ./.glitch-assets:51974198/861

--- a/public/maintenance.html
+++ b/public/maintenance.html
@@ -23,7 +23,8 @@
   <title>Uni's TextWall is down</title>
   <style>
     body {
-      background-image: url("https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/maintenance%20bg%202.png");
+      background-image: url("https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/maintenance_bg.png");
+      /* https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/maintenance%20bg%202.png */
       color: white;
       font-family: sans-serif;
       font-size: 32px;
@@ -46,15 +47,15 @@
   <audio
     src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/cqd6i7.mp3"
   ></audio>
-  <center>
+  <!--<center>
     <small>
       (You can join the
       <a href="https://discord.gg/rDXPEgFA6m" style="color: #0096ff"
         >Discord server</a
       >
-      while you wait...)<br /></small
+      while you wait)<br /></small
     ><br />
-  </center>
+  </center>-->
   <iframe
     src="https://discord.com/widget?id=1196101562741825677&theme=dark"
     width="350"
