🐂🌕 Checkpoint ./public/maintenance.html:51974198/178

--- a/public/maintenance.html
+++ b/public/maintenance.html
@@ -20,7 +20,7 @@
   <title>Uni's TextWall is down</title>
   <style>
     body {
-      background-image: url("https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/maintenance_bg.png");
+      background-image: url("https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/maintenance_bg.png?v=1744408112909");
       /* https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/maintenance%20bg%202.png */
       color: white;
       font-family: sans-serif;
