🏛💃 Checkpoint ./public/maintenance.html:51974198/66

--- a/public/maintenance.html
+++ b/public/maintenance.html
@@ -44,7 +44,7 @@
   <audio
     src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/cqd6i7.mp3"
   ></audio>
-  <!--<center>
+  <noscript>
     <small>
       (You can join the
       <a href="https://discord.gg/rDXPEgFA6m" style="color: #0096ff"
@@ -52,7 +52,7 @@
       >
       while you wait)<br /></small
     ><br />
-  </center>-->
+  </noscript>
   <iframe
     src="https://discord.com/widget?id=1196101562741825677&theme=dark"
     width="350"
@@ -80,8 +80,8 @@
     }
     document.addEventListener("touchstart", playVineBoom);
     document.addEventListener("pointerdown", playVineBoom);
-    console.log("Dimka's TextWall servers are under maintenance.");
-    console.log("Join the Discord Server at https://discord.gg/rDXPEgFA6m !!!");
+    console.log("Uni's TextWall is under maintenance.");
+    console.log("Join the Discord Server at https://discord.gg/rDXPEgFA6m");
     function checkSite() {
       fetch("/")
         .then((res) => {
