🚡🎋 Checkpoint ./server.js:65718371/2 ./textwallbackup.js:65718371/3691 ./backeduptextwall.js:65718371/144 ./public/authorized.html:65718371/56

--- a/public/authorized.html
+++ b/public/authorized.html
@@ -2,7 +2,7 @@
   <head>
     <title>Authorized</title>
   </head>
-  <body style="color: #FFFFFF; background-color: #000000"><center>
+  <body style="color: #edf2ff; background-color: #2b2c2e"><center>
     <h1>
       Authorized
     </h1>
