🏵🎲 Checkpoint ./public/static/textwall.js:65718371/367 ./public/index.html:65718371/75 ./public/static/colors.js:65718371/138 ./public/misc/textwalldeco.js:65718371/2367

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1"
     />
     <meta name="google" content="notranslate" />
-    <meta name="application-name" content="Uni's TextWall" />
-    <title>Uni's TextWall</title>
+    <meta name="application-name" content="Richardwall" />
+    <title>Richardwall</title>
     <link
       rel="icon"
       href="https://unitextwall.glitch.me/static/icons/icon.png"
@@ -16,7 +16,7 @@
     <link rel="manifest" href="/manifest.webmanifest" />
     <meta name="description" content="Multiplayer text editor, but better." />
     <meta id="theme-colour" name="theme-color" content="#222222" />
-    <meta property="og:title" content="Uni's TextWall" />
+    <meta property="og:title" content="Richardwall" />
     <meta property="og:type" content="website" />
     <meta name="keywords" content="textwall" />
     <meta
