🏀🐀 Checkpoint ./public/misc/textwalldeco.js:65718371/3870 ./public/static/textwall.js:65718371/30440 ./backeduptextwall.js:65718371/1290 ./textwallbackup.js:65718371/5164 ./public/index.html:65718371/40 ./public/static/colors.js:65718371/242

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1"
     />
     <meta name="google" content="notranslate" />
-    <meta name="application-name" content="Richardwall" />
-    <title>Richardwall</title>
+    <meta name="application-name" content="RichardWall" />
+    <title>RichardWall</title>
     <link
       rel="icon"
       href="https://unitextwall.glitch.me/static/icons/icon.png"
@@ -23,7 +23,7 @@
       property="og:description"
       content="Multiplayer text editor, but better."
     />
-    <meta property="og:url" content="https://unitextwall.glitch.me/" />
+    <meta property="og:url" content="https://richardtextwall.glitch.me/" />
     <meta
       property="og:image"
       content="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/image(5).png"
