🎡🦁 Checkpoint ./public/index.html:65718371/209

--- a/public/index.html
+++ b/public/index.html
@@ -666,6 +666,9 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
       <div class="decoration" id="underline">
         <img alt="underline" title="underline" src="/static/underline.svg" />
       </div>
+      <div class="decoration" id="overline">
+        <img alt="overline" title="overline" src="/static/overline.svg" />
+      </div>
       <div class="decoration" id="strikethrough">
         <img
           alt="strikethrough"
