--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <title>RichardWall</title>
     <link
       rel="icon"
-      href="https://unitextwall.glitch.me/static/icons/icon.png"
+      href="https://cdn.glitch.global/72265ca4-4364-4edd-a873-7a7a04d94042/RichardWall.png?v=1744997964649"
     />
     <link rel="manifest" href="/manifest.webmanifest" />
     <meta name="description" content="Multiplayer text editor, but better." />
@@ -26,7 +26,7 @@
     <meta property="og:url" content="https://richardtextwall.glitch.me/" />
     <meta
       property="og:image"
-      content="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/image(5).png"
+      content="https://cdn.glitch.global/72265ca4-4364-4edd-a873-7a7a04d94042/RichardWall.png?v=1744997964649"
     />
     <link rel="stylesheet" href="/static/textwall.css" />
     <script src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
