🐒🚡 Checkpoint ./public/index.html:65718371/1119 ./public/static/textwall.js:65718371/1071

--- a/public/index.html
+++ b/public/index.html
@@ -201,7 +201,14 @@
         ><br />
         <input id="rainbow" type="checkbox" /><label for="rainbow"
           >Rainbow text</label
-        ><br /><br />
+        ><br />
+        <label for="rainbow_mode"
+          >Rainbow mode: </label
+        ><select id="rainbowmodeselect">
+        <option>Normal</option>
+        <option>Light</option>
+        <option>Dark</option>
+        </select><br /><br />
         <label></label>
         <label for="zoom">Zoom: </label
         ><input
