🐊🎃 Checkpoint ./public/static/textwall.js:65718371/230 ./public/index.html:65718371/27

--- a/public/index.html
+++ b/public/index.html
@@ -618,8 +618,8 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
     <canvas touch-action="none" id="canvas"></canvas>
     <div id="info">
       <div class="infotext">
-        <span id="nearby">0 around</span>
-        <span id="coords">0,0</span>
+        <span id="nearby">0 people</span>
+        <span id="coords">0 X, 0 Y</span>
       </div>
       <div class="buttons">
         <div id="home" title="Home" class="infobtn">
