💽💏 Checkpoint ./public/static/textwall.js:65718371/16 ./public/index.html:65718371/83

--- a/public/index.html
+++ b/public/index.html
@@ -587,7 +587,11 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
             id="free"
             value="💨"
           /><br />
-          <table id="admintable"></table>
+          <table id="admintable">
+            <button id="mute">
+              
+            </button>
+          </table>
         </div>
       </div>
       <div class="sidething">
