🍴📹 Checkpoint ./public/static/textwall.js:65718371/418 ./public/index.html:65718371/23

--- a/public/index.html
+++ b/public/index.html
@@ -211,7 +211,7 @@
           value="10"
           id="zoom"
         /><br /><br />
-        <label for="rainbow_mode"
+        <label for="rainbowmodeselect"
           >Rainbow mode: </label
         ><select id="rainbowmodeselect">
         <option>Normal</option>
