🐈🛀 Checkpoint ./public/static/textwall.css:71769930/40903 ./public/static/textwall.js:71769930/2159 ./public/index.html:71769930/627

--- a/public/index.html
+++ b/public/index.html
@@ -416,6 +416,18 @@
         </div>
         <div>
           <h2>Miscellaneous</h2>
+
+          <h3>Oneko</h3>
+          <button onclick="summonOneko();">Summon an Oneko cat</button><br />
+          <button onclick="onekoDisaster();">ONEKO DISASTER!</button><br />
+          <button onclick="superOnekoDisaster();">SUPER ONEKO DISASTER</button
+          ><br />
+          <button onclick="ultraOnekoDisaster();">
+            ULTRA ONEKO DISASTER!!!
+          </button>
+          <button onclick="removeOneko();">Remove a Oneko cat</button><br />
+          <button onclick="removeDisasters();">Cancel Oneko Disasters</button
+          ><br /><br />
           <button
             onclick="joinDiscord();"
             style="background-color: #5865f2; color: #ffffff"
