🛤😹 Checkpoint ./public/static/textwall.js:65718371/205:71769930/113 ./public/index.html:65718371/57 ./public/static/textwall.css:65718371/53

--- a/public/index.html
+++ b/public/index.html
@@ -217,6 +217,7 @@
         <option>Normal</option>
         <option>Light</option>
         <option>Dark</option>
+        <option>Monochromatic</option>
         </select><br /><br />
         <label for="fontselect">Font: </label
         ><select id="fontselect"></select
