🏠🌵 Checkpoint ./public/static/textwall.js:65718371/730 ./public/index.html:65718371/113 ./public/static/textwall.css:65718371/27

--- a/public/index.html
+++ b/public/index.html
@@ -214,9 +214,10 @@
         <label for="rainbowmodeselect"
           >Rainbow mode: </label
         ><select id="rainbowmodeselect">
-        <option>Normal</option>
         <option>Light</option>
+        <option>Normal</option>
         <option>Dark</option>
+        <option>Monochromatic</option>
         </select><br /><br />
         <label for="fontselect">Font: </label
         ><select id="fontselect"></select
@@ -640,7 +641,7 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
     <div id="info">
       <div class="infotext">
         <span id="nearby">0 people</span>
-        <span id="coords">0 X, 0 Y</span>
+        <span id="coords">0X, 0Y</span>
       </div>
       <div class="buttons">
         <div id="home" title="Home" class="infobtn">
