🐽🌋 Checkpoint ./public/index.html:65718371/22 ./public/static/textwall.js:65718371/910

--- a/public/index.html
+++ b/public/index.html
@@ -667,7 +667,7 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
         </div>
         <div
           id="owner"
-          title="This user is the owner of Falling1's TextWall."
+          title="This user is the owner of RichardWall."
           class="infobtn"
           style="display: none"
         >
