🌗🌍 Checkpoint ./public/index.html:65718371/14680 ./public/static/textwall.js:65718371/38166

--- a/public/index.html
+++ b/public/index.html
@@ -149,26 +149,6 @@
         </table>
       </div>
     </div>
-    <div id="chat" class="hidden">
-      <div class="buttoncontainer">
-        <div id="chatbutton">
-          <img alt="chat" class="button" src="/static/chat.svg" />
-          <div id="unread"></div>
-        </div>
-      </div>
-      <div class="chatcontainer">
-        <div id="chatbox"></div>
-        <div class="msgcontainer">
-          <input
-            maxlength="400"
-            type="text"
-            title="type a message"
-            id="chatmsg"
-          />
-          <img alt="send" id="sendmsg" class="button" src="/static/send.svg" />
-        </div>
-      </div>
-    </div>
     <div id="usermenu" class="hidden">
       <div id="optionsmenu">
         <h1>Options</h1>
@@ -402,26 +382,23 @@
                   maxlength="64"
                   minlength="1"
                 /><br />
+                <in
+          <div id="chat" class="hidden">
+            <div class="chatcontainer">
+              <div id="chatbox"></div>
+              <div class="msgcontainer">
                 <input
-                  type="submit"
-                  id="deleteaccount"
-                  value="Delete account"
+                  maxlength="400"
+                  type="text"
+                  title="type a message"
+                  id="chatmsg"
                 />
-              </fieldset>
-            </form>
-          </div>
-        </div>
-        <div>
-          <h2>Miscellaneous</h2>
-
-          <h3>Oneko</h3>
-          <button onclick="summonOneko();">Summon an Oneko cat</button><br />
-          <button onclick="onekoDisaster();">ONEKO DISASTER!</button><br />
-          <button onclick="superOnekoDisaster();">SUPER ONEKO DISASTER</button
-          ><br />
-          <button onclick="ultraOnekoDisaster();">
-            ULTRA ONEKO DISASTER!!!
-          </button>
+                <img alt="send" id="sendmsg" class="button" src="/static/send.svg" />
+              </div>
+            </div>
+          </div>put
+                  type="submit"
+                  id="dele       </button>
           <button onclick="removeOneko();">Remove a Oneko cat</button><br />
           <button onclick="removeDisasters();">Cancel Oneko Disasters</button
           ><br /><br />
