👕🔔 Checkpoint ./public/index.html:65718371/1858

--- a/public/index.html
+++ b/public/index.html
@@ -382,23 +382,21 @@
                   maxlength="64"
                   minlength="1"
                 /><br />
-                <in
-          <div id="chat" class="hidden">
-            <div class="chatcontainer">
-              <div id="chatbox"></div>
-              <div class="msgcontainer">
-                <input
-                  maxlength="400"
-                  type="text"
-                  title="type a message"
-                  id="chatmsg"
-                />
-                <img alt="send" id="sendmsg" class="button" src="/static/send.svg" />
-              </div>
-            </div>
-          </div>put
-                  type="submit"
-                  id="dele       </button>
+          <div id="chat" class="open" bis_skin_checked="1">
+      <div class="buttoncontainer" bis_skin_checked="1">
+        <div id="chatbutton" bis_skin_checked="1">
+          <img alt="chat" class="button" src="/static/chat.svg">
+          <div id="unread" bis_skin_checked="1"></div>
+        </div>
+      </div>
+      <div class="chatcontainer" bis_skin_checked="1">
+        <div id="chatbox" bis_skin_checked="1"></div>
+        <div class="msgcontainer" bis_skin_checked="1">
+          <input maxlength="700" type="text" title="type a message" id="chatmsg" placeholder="chat with 2 other users">
+          <img alt="send" id="sendmsg" class="button" src="/static/send.svg">
+        </div>
+      </div>
+    </div>
           <button onclick="removeOneko();">Remove a Oneko cat</button><br />
           <button onclick="removeDisasters();">Cancel Oneko Disasters</button
           ><br /><br />
